ZON-1628: teeny weeny adjustment to teaser-fullwidth

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -1,6 +1,7 @@
 .teaser-fullwidth
 	@extend %teaser
 	border-bottom: 1px solid $zon_light_grey
+	padding-top: 0
 	+respond-min($break-tablet-min)
 		border-bottom: none
 		margin-left: -$page-padding
