ZON-1535: Finetune comments

--- a/sass/web.site/modules/_basics.sass
+++ b/sass/web.site/modules/_basics.sass
@@ -2,6 +2,9 @@
 	color: green
 	@extend %off-screen
 
+.nowrap
+	white-space: nowrap
+
 // override normalize.css
 input[type="search"]
 	+box-sizing(border-box)
