--- a/sass/web.site/modules/article/_article.sass
+++ b/sass/web.site/modules/article/_article.sass
@@ -9,11 +9,12 @@
 			margin-bottom: remify(40px)
 			margin-left: -$page-padding
 			margin-right: -$page-padding
+			width: auto
 			// TODO: make this specific or remove
 			//       currently targeting: .scaled-image img
 			img
 				width: 100%
-		
+
 		+respond-min($break-tablet-min)
 			max-width: remify(660px)
 			margin-left: auto
