Grunt: add livereload script to dev environments

--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -62,6 +62,9 @@
 
     {% include "zeit.web.core:templates/inc/ads/%s/head.html" % view.ad_delivery_type ignore missing %}
     {%- block content_ad_script -%}{%- endblock -%}
+    {% if view.is_dev_environment %}
+    <script src="//localhost:35729/livereload.js"></script>
+    {% endif %}
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" data-page-type="{{ view.type }}"  data-unique-id="{{ context.uniqueId }}" data-adDeliveryType="{{view.ad_delivery_type}}">
     <!-- tracking at top -->
