--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -28,6 +28,11 @@
 			+zon-button-dark
 			color: $white
 			margin: 0
+		+respond-min($break-desktop-min)
+			bottom: auto
+			left: auto
+			margin: remify(0 0 15px 15px)
+			position: static
 	&--inline
 		display: inline
 		+respond-min($break-desktop-min)
