--- a/sass/web.site/modules/video/_video-large.sass
+++ b/sass/web.site/modules/video/_video-large.sass
@@ -8,3 +8,18 @@
 	&__container
 		display: block
 		position: relative
+	&__inner
+		+respond-min($break-desktop-min)
+			position: relative
+			z-index: 3
+			margin-top: remify(-60px)
+		&--playing
+			margin-top: 0
+	&__description
+		@extend %teaser-text
+		display: none
+		color: $white
+		font-size: $font-m
+		+font-smoothing()
+		+respond-min($break-desktop-min)
+			display: block
