ZON-1622: small visual fixes

--- a/sass/web.site/modules/video/_video-small-title.sass
+++ b/sass/web.site/modules/video/_video-small-title.sass
@@ -12,6 +12,7 @@
 		font-weight: normal
 		letter-spacing: $zon-letter-spacing-l
 		margin-bottom: remify(4px)
+		+font-smoothing()
 		+respond-min($break-desktop-min)
 			display: block
 	&__title
