Escape ampersands in URLs

--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="sharing-menu__item">
-                    <a class="sharing-menu__link sharing-menu__link--twitter" href="http://twitter.com/intent/tweet?text={{ view.title }}&url={{ view.article_url }}&via=zeitonline" target="_blank">
+                    <a class="sharing-menu__link sharing-menu__link--twitter" href="http://twitter.com/intent/tweet?text={{ view.title }}&amp;url={{ view.article_url }}&amp;via=zeitonline" target="_blank">
                         Twitter
                     </a>
                 </li>
