--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -57,8 +57,13 @@
                     </a>
                 </li>
                 <li class="sharing-menu__item">
-                    <a class="sharing-menu__link sharing-menu__link--mail" href="mailto:?subject={{ view.title }} - Artikel auf ZEIT ONLINE">
+                    <a class="sharing-menu__link sharing-menu__link--mail" href="mailto:?subject={{ view.title }} - Artikel auf ZEIT ONLINE&body=Artikel auf ZEIT ONLINE lesen: {{ view.article_url }}">
                         Mail
+                    </a>
+                </li>
+                <li class="sharing-menu__item sharing-menu__item--whatsapp">
+                    <a class="sharing-menu__link sharing-menu__link--whatsapp" href="whatsapp://send?text={{ view.title }} - Artikel auf ZEIT ONLINE: {{ view.article_url }}">
+                        WhatsApp
                     </a>
                 </li>
             </ul>
