--- a/src/zeit/web/site/templates/inc/module/search-form.html
+++ b/src/zeit/web/site/templates/inc/module/search-form.html
@@ -1,17 +1,32 @@
 {% set module = module | get_module %}
 
 <form class="search-form">
-    <input type="text" name="q" id="query" value="{{ module.q }}"/>
-
-    {% for id, checked, label in module.mode_choice %}
-    <label for="{{ id }}">{{ label }}</label>
-    <input type="radio" name="mode" id="{{ id }}" value="{{ id }}"{% if checked %} checked{% endif %}/>
-    {% endfor %}
-
-    {% for id, checked, label in module.type_choice %}
-    <label for="{{ id }}">{{ label }}</label>
-    <input type="checkbox" name="type" id="{{ id }}" value="{{ id }}"{% if checked %} checked{% endif %}/>
-    {% endfor %}
-
-    <input type="submit" id="search" value="Suchen"/>
+    <div class="search-text-input">
+        <label for="query" class="search-text-input__label">Suchbegriff</label>
+        <input type="text" name="q" id="query" value="{% if module.q != 'None' %}{{ module.q }}{% endif %}" placeholder="Suchbegriff eingeben" class="search-text-input__input" autofocus />
+        <button type="submit" id="search" value="Suchen" class="search-submit">
+            <span class="search-submit__icon icon-zon-logo-navigation_suche"></span>
+            <span class="search-submit__text">Suchen</span>
+        </button>
+    </div>
+    
+    <div class="search-additional-queries">
+        <span class="search-additional-queries__toggle">+ Suchergebnis eingrenzen</span>
+        <div class="search-additional-queries__container">
+            <fieldset class="search-timerange">
+                <legend class="search-timerange__legend">Datum eingrenzen</legend>
+                {% for id, checked, label in module.mode_choice %}
+                <label for="{{ id }}">{{ label }}</label>
+                <input type="radio" name="mode" id="{{ id }}" value="{{ id }}"{% if checked %} checked{% endif %}/>
+                {% endfor %}
+            </fieldset>
+            <fieldset class="search-typerange">
+                <legend class="search-typerange__legend">Typ eingrenzen</legend>
+                {% for id, checked, label in module.type_choice %}
+                <label for="{{ id }}">{{ label }}</label>
+                <input type="checkbox" name="type" id="{{ id }}" value="{{ id }}"{% if checked %} checked{% endif %}/>
+                {% endfor %}
+            </fieldset>
+        </div>
+    </div>
 </form>
