ZON-1704: Setup json response

--- a/src/zeit/web/core/templates/post_test_comments.html
+++ b/src/zeit/web/core/templates/post_test_comments.html
@@ -24,7 +24,7 @@
                 </div>
                 <div>
                     <input id='pid' type='text' name='pid'/>
-                    <label for='pid'>Antwort auf (pid)</label>
+                    <label for='pid'>bezieht sich auf (pid)</label>
                 </div>
                 <div>
                     <select id='action' name='action'>
