--- a/sass/web.site/modules/comments/_comment-section.sass
+++ b/sass/web.site/modules/comments/_comment-section.sass
@@ -20,10 +20,14 @@
 			font-size: remify(20px)
 			display: inline
 			margin-bottom: 0
-	&__cta
-		+zon-button-light
+	&__button
 		white-space: nowrap
-		margin: 0
 		&:after
 			content: "\25B8" // ▸ = Black right-pointing small triangle
 			margin-left: 3px
+
+	&__form
+		margin-left: auto
+		margin-right: auto
+		max-width: remify(700px)
+		padding: 0 $page-padding
