ZON-1646: Update form styles

--- a/sass/web.site/modules/_forms.sass
+++ b/sass/web.site/modules/_forms.sass
@@ -13,7 +13,8 @@ select
 	border: 1px solid $color-input-border
 	color: $color-input
 	font-size: remify(15px)
-	padding: 1em
+	letter-spacing: $zon-letter-spacing-s
+	padding: remify(10px 20px)
 	&:focus
 		background-color: $color-input-bg--focus
 		border-color: $color-input-border--focus
