ZON-1646: Add animation for interactive state

--- a/sass/web.site/modules/comments/_comment-form.sass
+++ b/sass/web.site/modules/comments/_comment-form.sass
@@ -23,6 +23,9 @@
 	&__cancel
 		margin: 0 remify(22px)
 		border-bottom-color: currentcolor !important
+		display: none
+		+respond-min(em(480px))
+			display: inline
 		+link
 			color: $zon_grey
 		+on-interaction
