--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -206,3 +206,11 @@ $color-comment-border: $zon_light_grey
 	opacity: 0.55
 	vertical-align: text-bottom
 	width: remify(17px)
+	&--sending
+		+animation(rotate 1s linear infinite)
+
++keyframes(rotate)
+	from
+		+transform(rotate(0deg))
+	to
+		+transform(rotate(360deg))
