ZON-1646: Display recommended comments

--- a/sass/web.site/modules/comments/_comment-form.sass
+++ b/sass/web.site/modules/comments/_comment-form.sass
@@ -1,5 +1,11 @@
 .comment-form
 	+default-article-textlink
+	&__response--success
+		background-color: #d4e8d4
+		color: #278d27
+		padding: .75em
+		text-align: center
+
 	& > *:first-child
 		margin-top: 2em
 	&__avatar
