--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -11,7 +11,7 @@
         {% include
             ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(module | get_layout | hide_none, area_layout),
              "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(module | get_layout | hide_none, area_layout),
-             "zeit.web.site:templates/inc/module/" + module | get_layout | hide_none + ".html",
+             "zeit.web.site:templates/inc/module/" + module | get_layout | hide_none + ".html"] +
              (teaser and ["zeit.web.site:templates/inc/teaser/" + module | get_layout | default("default.tpl") + ".tpl"] or []) ignore missing %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
