ZON-1668: Add styles for search-count

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -82,5 +82,6 @@
 @import "modules/inline-gallery"
 @import "modules/standard-gallery"
 
-// suche
-@import "modules/search-form"
+// search
+@import "modules/search/search-form"
+@import "modules/search/search-counter"
