--- a/sass/web.site/modules/_pagination.sass
+++ b/sass/web.site/modules/_pagination.sass
@@ -10,6 +10,7 @@
 	&__button
 		+zon-button-inky
 		font-weight: normal
+		letter-spacing: 0.1em
 		line-height: remify(18px)
 		margin: 0
 		&--previous
