Style links in comments

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -65,6 +65,7 @@ $color-comment-border: $zon_light_grey
 			margin-left: 0
 
 	&__body
+		+default-article-textlink
 		clear: both
 		color: $zon-charcoal
 		font-size: remify(16px)
