--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,5 +1,4 @@
 <div class="{{ 'cp-area' | with_mods(area | get_layout, area.width | area_width) }}">
-    {% set area_layout = area.width | area_width %}
     {% block before_module_list %}{% endblock %}
     {% for module in area.values() -%}
         {% set teaser = module | first_child %}
@@ -9,8 +8,8 @@
            unrecognized modules, that don't behave like teaser blocks, from using the default teaser template.
            We can id them by checking if they contain a `first_child` teaser. (ND) #}
         {% include
-            ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(module | get_layout | hide_none, area_layout),
-             "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(module | get_layout | hide_none, area_layout),
+            ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(module | get_layout | hide_none, area.kind),
+             "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(module | get_layout | hide_none, area.kind),
              "zeit.web.site:templates/inc/module/" + module | get_layout | hide_none + ".html"] +
              (teaser and ["zeit.web.site:templates/inc/teaser/" + module | get_layout | default("default.tpl") + ".tpl"] or []) ignore missing %}
         {% block after_module_include scoped %}{% endblock %}
