ZON-1669: visual tweak to ZON-button 'inky'

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -245,7 +245,7 @@
 		cursor: default
 
 =zon-button-inky
-	+zon-button($zon_dark_grey, $zon_grey, $zon_dark_grey, $zon_grey, $white, $zon-alto, $white, $margin: 0, $padding: remify(5px) 1em remify(4px))
+	+zon-button($zon_dark_grey, $zon_charcoal, $zon_dark_grey, $zon_charcoal, $white, $white, $white, $margin: 0, $padding: remify(5px) 1em remify(4px))
 
 =zon-button-dark
 	+zon-button(rgba(0,0,0, 0.2), rgba(0,0,0, 0.5), $zon_mid_grey, $zon-alto, $zon_lighter_grey, $white, $zon-alto)
