ZON-1710: Rewrite include statements using more typesafe format syntax

--- a/src/zeit/web/magazin/templates/inc/advertorials/default.html
+++ b/src/zeit/web/magazin/templates/inc/advertorials/default.html
@@ -1,4 +1,4 @@
-{% extends "zeit.web.magazin:templates/" + view.type + ".html" %}
+{% extends "zeit.web.magazin:templates/{}.html".format(view.type) %}
 
 {% block css_link %}
 <!--[if gt IE 8]><!-->
