--- a/src/zeit/web/magazin/templates/advertorial.html
+++ b/src/zeit/web/magazin/templates/advertorial.html
@@ -1,3 +1,3 @@
 {%- include
-    ["zeit.web.magazin:templates/inc/advertorials/" + view.sub_ressort + ".html",
+    ["zeit.web.magazin:templates/inc/advertorials/{}.html".fomat(view.sub_ressort),
     "zeit.web.magazin:templates/inc/advertorials/default.html"] -%}
