--- a/src/zeit/web/magazin/templates/article.html
+++ b/src/zeit/web/magazin/templates/article.html
@@ -27,7 +27,7 @@
         <div class="article__wrap">
             {% block article_header %}
                 {% if view.current_page.number == 0 %}
-                    {% include "zeit.web.magazin:templates/inc/headers/article_header_" + view.header_layout + ".html" ignore missing with context %}
+                    {% include "zeit.web.magazin:templates/inc/headers/article_header_{}.html".format(view.header_layout) ignore missing with context %}
                 {% else %}
                     {% include "zeit.web.magazin:templates/inc/headers/article_header_sequelpages.html" ignore missing with context %}
                 {% endif %}
